fix page jump in navigation

--- a/site/styles/_variables.scss
+++ b/site/styles/_variables.scss
@@ -56,12 +56,12 @@ $navbar-dark-color:         $body-color !default;
 $navbar-dark-hover-color:   #FD4766 !default;
 
 // Navbar Logo (Brand)
-$navbar-brand-padding-y: 15px !default;
+$navbar-brand-padding-y: 25px !default;
 $navbar-brand-min-width: 130px !default;
 $navbar-brand-min-width-md: 200px !default;
 $navbar-brand-min-width-lg: 200px !default;
 $navbar-brand-min-width-xl: 200px !default;
-$navbar-search-top: 20px !default;
+$navbar-search-top: 30px !default;
 
 // Sub Navivgation
 $subnav-background-color: #302e30 !default;
